Fixed bug #24827 (ob_gzhandler overrides Vary header)